# tenor

./: .cargo-mutants.toml  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  test_connection.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CODE_QUALITY_SUMMARY.md  IMPLEMENTATION_STATUS.md  TESTING.md
docs/design/: engine-api-spec.md  tenor-design-doc.md  ui-ux-spec.md
tenor-core/: Cargo.toml
tenor-core/src/: engine.rs  error.rs  lib.rs
tenor-core/src/domain/: container.rs  image.rs  mod.rs  network.rs  volume.rs
tenor-core/tests/: domain_tests.rs
tenor-docker/: Cargo.toml
tenor-docker/src/: client.rs  context.rs  engine_impl.rs  lib.rs  mapper.rs
tenor-docker/tests/: client_tests.rs
tenor-tui/: Cargo.toml
tenor-tui/src/: app.rs  event.rs  lib.rs  main.rs  terminal.rs  ui.rs
tenor-tui/src/components/: mod.rs  modal.rs
tenor-tui/src/screens/: mod.rs
tenor-tui/tests/: app_tests.rs
