[workspace.package]
authors = ["ryone9re <ryone9re@ryone.dev>"]
repository = "https://github.com/ryone9re/tenor"
edition = "2024"
license = "MIT"
readme = "README.md"

[workspace]
members = ["tenor-core", "tenor-docker", "tenor-tui"]
resolver = "3"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "stream"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Terminal UI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Utilities
futures = "0.3"
bytes = "1.0"
async-trait = "0.1"
